Fix text spacing

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ header nav ul li .selected {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 5px;
 }
 
 .hero h1 {
@@ -84,11 +85,11 @@ header nav ul li .selected {
 .hero p {
     margin: 0;
     font-size: 1.5em;
-    padding: 15px;
+    padding: 0;
 }
 
 .explore-button {
-    margin-top: 20px;
+    margin-top: 0;
     padding: 10px 20px;
     background-color: #694736;
     color: #faecb6;
